_sass/_components.header.scss
$header-height--desktop: 101px; // 1px border
$header-height--mobile: 67px; // 1px border

.header {
  @extend %clearfix;

  padding: rhythm(3) 0;
  border-bottom: solid 1px $border-color;
  background: white;

  &__navigation {
    display: flex;
    justify-content: flex-end;

    .subscribe-form {
      display: flex;
      width: calc-columns-width(3);
      order: 1;
      margin-left: rhythm(4);

      &__email {
        @include input-style(default);
        border-right: 0;
        font-size: ms(-1);
        flex-basis: 70%;
      }

      &__submit {
        flex-basis: 40%;
      }
    }
  }

  // start primary navigation
  .navigation {
    display: flex;
    align-items: center;

    &__items {
      margin: 0;
      padding: 0;
      text-align: right;
    }

    &__item {
      display: inline-block;
      margin: 0 rhythm(1);

      &:first-child {
        margin-left: 0;
      }

      &:last-child {
        margin: 0 0 0 rhythm(1);
      }
    }

    &__link {
      line-height: rhythm(4);
      display: inline-block;
      padding: 0 rhythm(1);

      &--active {
        color: $text-color-soft;
      }

      &:hover {
        color: $text-color-soft;
      }
    }

    &__button {
      font-size: ms(0);
      margin-left: rhythm(1);
    }

    &-dropdown__menu .navigation__link {
      display: block;
      line-height: 1.2;
    }
  }

  &__logo {
    float: left;
  }

  &__subtitle {
    > p {
      font-size: 32px;
      line-height: 37.92px;
    }

    > h2,
    > h3 {
      font-weight: 400;
      line-height: rhythm(4);
      margin: rhythm(2) 0 rhythm(2);
    }

    > h2 {
      font-size: ms(2);
    }

    > h3,
    > h4 {
      font-size: ms(1);
    }

    > ul {
      @extend %list-styled;
    }
  }

  &__button {
    @extend %button--large;
    margin-top: rhythm(2);
    margin-right: rhythm(3);

    &-group {
      a {
        display: inline-block;

        &.header__link {
          margin-left: 0;
        }
      }
    }
  }

  &__link {
    @include link-style;

    margin-left: rhythm(5);
    padding-bottom: rhythm(1);
    border-bottom: solid 2px $border-color;
  }

  &-mobile-button {
    display: none;
  }
}

// hero header for homepage
.hero {
  position: relative;
  padding-top: rhythm(14);
  padding-bottom: rhythm(21);
  background: $header-hero-background-color;
  background-size: contain !important;

  &-new-updated-dressipi {
    background-color: white !important;
  }

  &__content {
    float: left;
    width: calc-columns-width(5);
    max-width: 580px;

    &--extend {
      @include margin-center;
      @include text-center;

      max-width: calc-columns-width(7);
    }

    &--full {
      @include margin-center;
      @include text-center;

      max-width: 100%;
    }
  }

  .banner-page-title-wrapper {
    display: flex;

    img {
      width: 40px;
      height: 40px;
      margin-right: 10px;
    }

    .banner-page-title {
      text-transform: uppercase;
      line-height: 40px;
      font-size: 30px;
      margin-bottom: 15px;
    }
  }

  // hero header for content pages
  &-content {
    padding-top: rhythm(14);
    padding-bottom: rhythm(14);

    .header__title {
      font-size: ms(7);
      line-height: rhythm(7);
      margin: 0 0 rhythm(1) 0;
    }

    .twitter-logo {
      width: 30px;
      margin-bottom: -10px;
    }
  }

  &--tight {
    padding-top: rhythm(5);
    padding-bottom: rhythm(5);
  }
}

.index {
  padding: 0;

  .hero__content {
    width: auto;
    max-width: 1130px;
  }
}

@media (min-width: 1001px) {
  .navigation-dropdown {
    position: relative;
    padding-top: 15px;
    padding-bottom: 15px;

    &__trigger {
      position: relative;
      padding-right: 12px;
      cursor: pointer;

      &::after {
        position: absolute;
        top: 0;
        right: 0;
        bottom: 0;
        width: 0;
        height: 0;
        margin: auto;
        content: "";
        border-top: 4px solid $header-dropdown-triangle-color;
        border-right: 4px solid transparent;
        border-left: 4px solid transparent;
      }

      &--active {
        color: $text-color-soft;
      }
    }

    &__menu {
      position: absolute;
      z-index: -1;
      top: 100%;
      left: rhythm(2) * -1;
      visibility: hidden;
      transition: transform 0.35s ease;
      transform: translateY(-10px);
      border: 1px solid $border-color;
      background: $header-dropdown-background-color;

      > li {
        padding: rhythm(1) 0;
        border-bottom: 1px solid $border-color;

        &:last-child {
          border-bottom: 0;
        }
      }
    }

    &:hover > .navigation-dropdown__menu {
      z-index: 100;
      visibility: visible;
      transform: translateY(0);
      opacity: 1;
      width: 205px;
    }
  }
}

// affix header
.header-wrapper {
  height: $header-height--desktop;
}

.header.affix,
.header.hold {
  position: fixed;
  z-index: 1000;
  top: -$header-height--desktop;
  right: 0;
  left: 0;
  transition: transform 0.3s ease-in-out 0.1s;
  transform: translate3D(0, $header-height--desktop, 0);
}

.header.hold {
  transform: translate3D(0, 0, 0) !important;
}

// responisve styles
@media (max-width: 1000px) {
  .hero {
    background-position: center !important;
    background-size: cover !important;
    padding-top: rhythm(10);
    padding-bottom: rhythm(10);
  }

  .header {
    position: relative;
    padding: rhythm(2) 0;

    .navigation {
      position: absolute;
      z-index: 100;
      top: 100%;
      right: 0;
      left: 0;
      display: none;
      padding: 0 0 rhythm(4) 0;
      text-align: center;
      border-top: 1px solid $border-color;
      border-bottom: 1px solid $border-color;
      background: $header-mobile-nav-background-color;

      &--open {
        display: block;
      }

      &__item {
        display: block;
        margin: 0 rhythm(2);

        &:first-child > .navigation__link {
          border-top: none;
        }

        &:last-child {
          margin: 0 rhythm(2);
        }
      }

      &-dropdown__trigger {
        display: none;
      }

      &__link {
        display: block;
        border-top: 1px solid $border-color;
        padding: rhythm(2) 0;
      }

      &-dropdown {
        &__trigger {
          line-height: rhythm(4);
        }

        &__menu {
          position: static;
          visibility: visible;
          opacity: 1;
        }
      }
    }

    &__navigation {
      .subscribe-form {
        display: flex;
        width: auto;
        margin: 0 rhythm(2);
      }
    }

    &__logo {
      > svg {
        // original width 147px, height 50px
        width: 147 / 50 * 32px;
        height: 32px;
      }
    }

    &-mobile-button {
      display: block;
      float: right;
      width: auto;

      > svg {
        width: 32px;
        height: 32px;
      }

      > #svg-cross {
        display: none;
      }

      &--open {
        > #svg-menu {
          display: none;
        }

        > #svg-cross {
          display: block;
        }
      }
    }
  }

  // responsive affix header
  .header-wrapper {
    height: $header-height--mobile;
  }

  .header.affix,
  .header.hold {
    top: -$header-height--mobile;
    transform: translate3D(0, $header-height--mobile, 0);
  }

  .hero__content {
    width: calc-columns-width(4);
  }

  .index {
    padding: 0;
  }
}

// tablet responsive styles
@include responsive(tablet) {
  .hero {
    position: relative;
    background-position: center !important;
    background-size: cover !important;
    padding-top: rhythm(10);
    padding-bottom: rhythm(10);

    &--mobile::before {
      position: absolute;
      z-index: 1;
      top: 0;
      right: 0;
      bottom: 0;
      left: 0;
      content: "";
      background: $header-hero-mask-color !important;
    }

    &__content {
      position: relative;
      z-index: 2;
      width: 100%;
    }

    &--tight {
      padding-top: rhythm(5);
      padding-bottom: rhythm(5);
    }
  }

  .index {
    padding: 0;
  }

  .header__title {
    font-size: 27px !important;
  }

  .header__subtitle {
    .header__banner-subtitle {
      font-size: 24px !important;
    }
  }

  .hero-content .header__title {
    line-height: rhythm(5);
  }

  .banner-page-title-wrapper {
    .banner-page-title {
      font-size: 16px !important;
    }

    .banner-page-title-icon {
      width: 30px !important;
    }
  }
}

// mobile responsive styles
@include responsive(mobile) {
  .header {
    &__link {
      display: block;
      margin: rhythm(4) 0 0;
    }

    &__button {
      display: block;
      width: 100%;
      text-align: center;
      margin-top: 0;

      &-group > a.header__link {
        display: block;
        text-align: center;
        margin-right: auto;
        margin-left: auto;
        border-bottom: none;
      }
    }

    &__title {
      font-size: ms(6);
      line-height: rhythm(5);
    }
  }

  .hero-content .header__title {
    line-height: rhythm(5);
  }

  .hero {
    padding-top: rhythm(4);
    padding-bottom: rhythm(5);
    background: $header-hero-background-color !important;

    &-new-updated-dressipi {
      background-color: white !important;
    }

    &__content {
      width: 100%;
    }
  }

  .index {
    padding: 0;
  }
}

